--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 data/ filter=lfs diff=lfs merge=lfs -text
 data/hello.txt filter=lfs diff=lfs merge=lfs -text
+data/goodbye.txt filter=lfs diff=lfs merge=lfs -text
